--- a/Formulario_de_Registro/client/css/style.css
+++ b/Formulario_de_Registro/client/css/style.css
@@ -1,4 +1,17 @@
 
 body{
+  height: 100vh;
   background-color: #36393e;
+}
+
+.container-fluid{
+  height: 100%;
+  width: 100%;
+}
+
+.form-container{
+  background-color: aliceblue;
+  border-radius: 2rem;
+  width: 60%;
+  height: 100%;
 }
